--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "build": "webpack --mode production",
     "start": "webpack serve --mode development --open"
   },
+  "dependencies": {
+    "dayjs": "1.11.6"
+  },
   "devDependencies": {
     "@babel/core": "7.20.5",
     "@babel/preset-env": "7.20.2",
     "babel-loader": "9.1.0",
     "copy-webpack-plugin": "11.0.0",
-    "dayjs": "1.11.6",
     "eslint": "8.28.0",
     "eslint-config-htmlacademy": "8.0.0",
     "webpack": "5.75.0",
